# consal

./: .gitignore  CONSAL_GOALS.md  EIGEN_GOALS.md  README.md  pyproject.toml
.devcontainer/consal-test/: README.md  allowlist.txt  devcontainer.json  guardrail-hook.sh
.devcontainer/eigen-test/: README.md  allowlist.txt  devcontainer.json  guardrail-hook.sh
scripts/: run-integration-tests.sh
src/consal/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  container.py  doctor.py  github.py  prompts.py  scheduler.py  settings.py  state.py
src/consal/templates/: allowlist.txt  devcontainer.json  guardrail-hook.sh
src/eigen/: __init__.py  __main__.py  cli.py  config.py  container.py  github.py  guardrails.py  prompts.py  scheduler.py  state.py
src/eigen/templates/: allowlist.txt  devcontainer.json
tests/integration/: conftest.py  test_bootstrap.py  test_container.py  test_doctor.py  test_environment.py  test_github.py  test_guardrail_enforcement.py  test_placeholder.py  test_scheduler.py
tests/unit/: test_bootstrap.py  test_cli.py  test_config.py  test_container.py  test_doctor.py  test_github.py  test_guardrail_hook.py  test_prompts.py  test_scheduler.py  test_settings.py  test_state.py
